--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,9 +1,8 @@
-@import 'button';
+@import 'bootstrap';
 
 html {
-  background-color: #f2f2f2;
 
   p {
-    color: white;
+    color: black;
   }
 }
