--- a/src/components/bgImg/_bgImg.scss
+++ b/src/components/bgImg/_bgImg.scss
@@ -1,5 +1,28 @@
 .hero-bg-img {
-  height: 102vh;
+  height: 650px;
   margin-top: -120px;
-  padding-top: 150px;
+  padding-top: 140px;
+
+  .hero-joyjet {
+    padding-left: 15px;
+  }
+
+  .title-hero {
+    color: var(--white);
+    font-size: 10rem;
+    text-transform: uppercase;
+  }
+  .blue-dot {
+    color: var(--blue);
+  }
+  .subtitle-hero {
+    color: var(--white);
+    font-size: 1.5rem;
+    line-height: 1.5;
+  }
+
+  .trending-today {
+    background-color: rgba($color: #000000, $alpha: .4);
+    height: 195px;
+  }
 }
