--- a/src/components/button/_button.scss
+++ b/src/components/button/_button.scss
@@ -1,13 +1,16 @@
-.button {
-  background-color: rgba(rebeccapurple, 0.7);
-  color: white;
+.hero-button {
+  background-color: var(--blue);
+  color: var(--white);
+  font-size: 1.5rem;
+  line-height: 1.7;
   cursor: pointer;
-  font-weight: 700;
-  padding: 1rem;
-  text-transform: uppercase;
+  text-transform: lowercase;
   transition: all 0.4s ease;
+  padding: 10px 50px;
+  border-radius: 8px;
+  border-width: 0;
 
   &:hover {
-    background-color: rgba(rebeccapurple, 0.9);
+    background-color: rgba(rebeccapurple, 0.2);
   }
 }
