--- a/src/components/header/_header.scss
+++ b/src/components/header/_header.scss
@@ -1,3 +1,15 @@
 .navbar-joyjet {
   z-index: 150;
+
+  .nav-item {
+    padding: 0 10px;
+    a {
+      color: var(--white);
+      text-transform: uppercase;
+      padding: 5px;
+    }
+    .active {
+      color: red;
+    }
+  }
 }
