--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,9 +1,9 @@
+@import 'variables';
 @import 'bootstrap';
 @import 'slick';
 
-html {
 
-  p {
-    color: black;
-  }
+body {
+  font-size: 1.1rem;
+  line-height: 1;
 }
