--- a/src/components/bgImg/_bgImg.scss
+++ b/src/components/bgImg/_bgImg.scss
@@ -1,10 +1,9 @@
 .hero-bg-img {
-  height: 650px;
   margin-top: -120px;
-  padding-top: 140px;
+  padding-top: 160px;
 
   .hero-joyjet {
-    padding-left: 15px;
+    margin-bottom: 110px;
   }
 
   .title-hero {
@@ -19,10 +18,40 @@
     color: var(--white);
     font-size: 1.5rem;
     line-height: 1.5;
+    margin-bottom: 80px;
   }
 
   .trending-today {
     background-color: rgba($color: #000000, $alpha: .4);
-    height: 195px;
+    padding: 40px 0;
+
+    .trending-today-container {
+      display: flex;
+      align-items: center;
+      padding: 0 2%;
+    }
+
+    .trending-today-title {
+      color: var(--white);
+      text-align: right;
+      font-size: 1.6rem;
+      font-weight: 600;
+      line-height: 1.6;
+      margin-right: 40px;
+
+
+      span {
+        color: var(--blue);
+      }
+    }
+
+    .trending-today-item {
+      color: var(--white);
+      text-align: left;
+      font-size: 1.2rem;
+      line-height: 1.6;
+      border-left: 1px solid var(--white);
+      padding: 0 30px;
+    }
   }
 }
