--- a/src/components/footer/_footer.scss
+++ b/src/components/footer/_footer.scss
@@ -1,3 +1,7 @@
 .footer-content {
-  border-top: 1px solid red;
+  border-top: 1px solid #efefef;
+  padding-top: 10px;
+  font-size: .8rem;
+  margin-bottom: 15px;
+  color: #ccc8c7;
 }
