hero change, bg color

--- a/src/components/homeBanner/_bgImg.scss
+++ b/src/components/homeBanner/_bgImg.scss
@@ -16,7 +16,8 @@
   }
   .subtitle-hero {
     color: var(--white);
-    font-size: 1.5rem;
+    font-size: 1.3rem;
+    font-weight: 300;
     line-height: 1.5;
     margin-bottom: 80px;
   }
@@ -49,6 +50,7 @@
       color: var(--white);
       text-align: left;
       font-size: 1.2rem;
+      font-weight: 300;
       line-height: 1.6;
       border-left: 1px solid var(--white);
       padding: 0 30px;
