--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -17,6 +17,8 @@ $primary: #4a90e2;
 :root {
   --white: #ffffff;
   --blue: #4a90e2;
+  --gray-text: #506074;
+  --gray-bg: #f8f8f8;
 }
 
 $grid-breakpoints: (
