--- a/src/components/footer/_footer.scss
+++ b/src/components/footer/_footer.scss
@@ -1,7 +1,8 @@
 .footer-content {
   border-top: 1px solid #efefef;
-  padding-top: 10px;
-  font-size: .8rem;
-  margin-bottom: 15px;
+  padding-top: 20px;
+  font-size: .9rem;
+  font-weight: 300;
+  margin-bottom: 60px;
   color: #ccc8c7;
 }
