--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -2,9 +2,14 @@
 @import 'bootstrap';
 @import 'slick';
 
+html {
+	scroll-behavior: smooth;
+}
 
 body {
+  background-color: var(--gray-bg);
   font-size: 1.1rem;
+  font-weight: 400;
   line-height: 1;
 }
 
