--- a/src/components/header/_header.scss
+++ b/src/components/header/_header.scss
@@ -12,4 +12,11 @@
       color: red;
     }
   }
+
+  
+}
+/* Change navbar styling on scroll */
+.navbar-joyjet.active {
+  background: var(--blue);
+  box-shadow: 1px 2px 10px rgba(0, 0, 0, 0.1);
 }
