--- a/src/components/header/_header.scss
+++ b/src/components/header/_header.scss
@@ -1,6 +1,8 @@
 .navbar-joyjet {
   z-index: 150;
 
+  transition: all 0.2s ease-out 0s;
+
   .nav-item {
     padding: 0 10px;
     a {
@@ -19,4 +21,6 @@
 .navbar-joyjet.active {
   background: var(--blue);
   box-shadow: 1px 2px 10px rgba(0, 0, 0, 0.1);
+
+  transition: all 0.2s ease-out 0s;
 }
