--- a/src/components/footer/_footer.scss
+++ b/src/components/footer/_footer.scss
@@ -3,6 +3,6 @@
   padding-top: 20px;
   font-size: .9rem;
   font-weight: 300;
-  margin-bottom: 60px;
+  margin: 100px 0 60px 0;
   color: #ccc8c7;
 }
