--- a/src/styles/_bootstrap.scss
+++ b/src/styles/_bootstrap.scss
@@ -15,6 +15,7 @@
 @import './node_modules/bootstrap/scss/_grid.scss';
 @import './node_modules/bootstrap/scss/_nav.scss';
 @import './node_modules/bootstrap/scss/_navbar.scss';
+@import './node_modules/bootstrap/scss/_transitions.scss';
 @import './node_modules/bootstrap/scss/_utilities.scss';
 
 
