--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -17,4 +17,78 @@ header {
       padding: 0 1rem;
     }
   }
+
+  
 }
+
+.navbar-collapse {
+  padding-top: 25px;
+
+  @include media-breakpoint-down(md) {
+    position: absolute;
+    bottom: -280px;
+    background-color:  $white;
+    text-align: center;
+    right: 20px;
+    z-index: 980148;
+
+    -moz-box-shadow: 0px 1px 6px 0px rgba(51,51,51,0.4);
+    box-shadow: 0px 1px 6px 0px rgba(51,51,51,0.4);
+
+    .header-sm {
+      margin: 20px auto 20px auto;
+      padding: 20px;
+    }
+
+    .header-sm .icon {
+      padding: 0 3px;
+      margin: 0 10px;
+    }
+
+  }
+
+}
+
+
+/* ICON HAMBURGER EFFECT */
+.icon-bar {
+  width: 40px;
+  height: 3px;
+  background-color: white;
+  display: block;
+  transition: all 0.2s;
+  margin-top: 8px
+}
+
+.navbar-toggler {
+  border: 1px solid red;
+  outline: none;
+  background-color: red !important;
+}
+.navbar-toggler .top-bar {
+  transform: rotate(45deg);
+  transform-origin: 10% 10%;
+}
+
+.navbar-toggler .middle-bar {
+  opacity: 0;
+}
+
+.navbar-toggler .bottom-bar {
+  transform: rotate(-45deg);
+  transform-origin: 10% 90%;
+}
+
+.navbar-toggler.collapsed .top-bar {
+  transform: rotate(0);
+}
+
+.navbar-toggler.collapsed .middle-bar {
+  opacity: 1;
+}
+
+.navbar-toggler.collapsed .bottom-bar {
+  transform: rotate(0);
+}
+
+/* END ICON HAMBURGER EFFECT */
