--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -7,8 +7,190 @@ html {
 }
 
 body {
-  background-color: var(--gray-bg);
+  background-color: $gray-bg;
   font-size: 1.1rem;
   font-weight: 400;
   line-height: 1;
+}
+
+//Comps - Buttons
+.hero-button {
+  background-color: $primary;
+  color: $white;
+  font-size: 1.5rem;
+  line-height: 1.7;
+  cursor: pointer;
+  text-transform: lowercase;
+  transition: all 0.4s ease;
+  padding: 10px 50px;
+  border-radius: 8px;
+  border-width: 0;
+
+  &:hover {
+    background-color: rgba(rebeccapurple, 0.2);
+  }
+  
+}
+
+// ----------- Header
+.navbar-joyjet {
+  z-index: 150;
+
+  transition: all 0.2s ease-out 0s;
+
+  .nav-item {
+    padding: 0 10px;
+    a {
+      color: $white;
+      text-transform: uppercase;
+      padding: 5px;
+    }
+    .active {
+      color: red;
+    }
+  }
+
+  
+}
+/* Change navbar styling on scroll */
+.navbar-joyjet.active {
+  background: $primary;
+  box-shadow: 1px 2px 10px rgba(0, 0, 0, 0.1);
+
+  transition: all 0.2s ease-out 0s;
+}
+
+//------- Banner space
+.home-hero {
+  padding-top: 160px;
+
+  .hero-joyjet {
+    margin-bottom: 110px;
+    display: inline-block;
+  }
+
+  .title-hero {
+    color: $white;
+    font-size: 10rem;
+    text-transform: uppercase;
+  }
+  .blue-dot {
+    color: $primary;
+  }
+  .subtitle-hero {
+    color: $white;
+    font-size: 1.3rem;
+    font-weight: 300;
+    line-height: 1.5;
+    margin-bottom: 80px;
+  }
+
+  .trending-today {
+    background-color: rgba($color: #000000, $alpha: .4);
+    padding: 40px 0;
+
+    @include media-breakpoint-down(md) {
+      display: none !important;
+		}
+
+    .trending-today-container {
+      display: flex;
+      align-items: center;
+      padding: 0 2%;
+    }
+
+    .trending-today-title {
+      color: $white;
+      text-align: right;
+      font-size: 1.6rem;
+      font-weight: 600;
+      line-height: 1.6;
+      margin-right: 40px;
+
+
+      span {
+        color: $primary;
+      }
+    }
+
+    .trending-today-item {
+      color: $white;
+      text-align: left;
+      font-size: 1.2rem;
+      font-weight: 300;
+      line-height: 1.6;
+      border-left: 1px solid $white;
+      padding: 0 30px;
+    }
+
+    
+  }
+}
+
+
+//-------- Section Blog Slick slider
+.blog-section {
+    
+  .blog-container-section {
+      padding: 120px 0 80px 0;
+  }
+
+  .blog-section-card {
+      background-color: $white;
+      border-radius: 10px;
+
+      .blog-section-content__container-text {
+          padding: 20px;
+      }
+      .blog-section-content__container-img {
+          border-radius: 10px 10px 0 0;
+      }
+  }
+  /*
+  .slick-slide {
+      padding: 0 15px;
+      }
+      
+      .slick-list {
+      margin: 0 2em;
+      }
+  */
+  .slick-slide {
+  padding: 0 15px 0 5px;
+  box-sizing: border-box;
+  }
+  .slick-prev:before, .slick-next:before {
+      display: none;
+  }
+}
+
+//----------- Section About us
+.about-us {
+  padding-top: 60px;
+
+  .about-us-img {
+    border-radius: 12px;
+  }
+
+  .about-title {
+    font-size: 2.3rem;
+    color: $primary;
+    text-transform: uppercase;
+    margin: 15px 0 30px 0;
+  }
+  .about-text {
+    color: $gray-text;
+    font-size: 1.2rem;
+    line-height: 2;
+  }
+}
+
+//------------ Footer
+.footer-content {
+  border-top: 1px solid #efefef;
+  padding-top: 20px;
+  font-size: .9rem;
+  font-weight: 300;
+  margin: 100px 0 60px 0;
+  color: #ccc8c7;
 }
