--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -10,14 +10,9 @@ $primary: #4a90e2;
 $white: #ffffff;
 $gray-text: #506074;
 $gray-bg: #f8f8f8;
+$gray-title: #4f6072;
+$gray-text-clean: #a2aabb;
 
-
-:root {
-  --white: #ffffff;
-  --blue: #4a90e2;
-  --gray-text: #506074;
-  --gray-bg: #f8f8f8;
-}
 
 $grid-breakpoints: (
 	xs: 0,
