--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -50,6 +50,78 @@ body {
     }
   }
 
+  //NavMenu Down
+  .navbar-collapse {
+
+  
+    @include media-breakpoint-down(md) {
+      position: absolute;
+      bottom: -280px;
+      background-color:  $white;
+      text-align: center;
+      right: 20px;
+      z-index: 980148;
+  
+      -moz-box-shadow: 0px 1px 6px 0px rgba(51,51,51,0.4);
+      box-shadow: 0px 1px 6px 0px rgba(51,51,51,0.4);
+  
+      .header-sm {
+        margin: 20px auto 20px auto;
+        padding: 20px;
+      }
+  
+      .header-sm .icon {
+        padding: 0 3px;
+        margin: 0 10px;
+      }
+  
+    }
+  
+  }
+
+/* ICON HAMBURGER EFFECT */
+.icon-bar {
+  width: 40px;
+  height: 3px;
+  background-color: white;
+  display: block;
+  transition: all 0.2s;
+  margin-top: 8px
+}
+
+.navbar-toggler {
+  border: 1px solid transparent;
+  outline: none;
+  background-color: transparent !important;
+}
+.navbar-toggler .top-bar {
+  transform: rotate(45deg);
+  transform-origin: 10% 10%;
+}
+
+.navbar-toggler .middle-bar {
+  opacity: 0;
+}
+
+.navbar-toggler .bottom-bar {
+  transform: rotate(-45deg);
+  transform-origin: 10% 90%;
+}
+
+.navbar-toggler.collapsed .top-bar {
+  transform: rotate(0);
+}
+
+.navbar-toggler.collapsed .middle-bar {
+  opacity: 1;
+}
+
+.navbar-toggler.collapsed .bottom-bar {
+  transform: rotate(0);
+}
+
+/* END ICON HAMBURGER EFFECT */
+
   
 }
 /* Change navbar styling on scroll */
@@ -73,6 +145,14 @@ body {
     color: $white;
     font-size: 10rem;
     text-transform: uppercase;
+
+    @include media-breakpoint-down(md) {
+      font-size: 7rem;
+    }
+    @include media-breakpoint-down(sm) {
+      font-size: 5rem;
+    }
+    
   }
   .blue-dot {
     color: $primary;
@@ -81,8 +161,12 @@ body {
     color: $white;
     font-size: 1.3rem;
     font-weight: 300;
-    line-height: 1.5;
+    line-height: 1.8;
     margin-bottom: 80px;
+
+    @include media-breakpoint-down(md) {
+      font-size: 1rem;
+    }
   }
 
   .trending-today {
@@ -134,13 +218,27 @@ body {
   .blog-container-section {
       padding: 120px 0 80px 0;
   }
-
+  .blog-section-card-link {
+    text-decoration:none;
+  }
   .blog-section-card {
       background-color: $white;
       border-radius: 10px;
 
       .blog-section-content__container-text {
           padding: 20px;
+
+          .blog-section-content__container-title {
+            margin-bottom: 20px;
+            color: $gray-title;
+            font-weight: 400;
+          }
+
+          .blog-section-content__container-excerpt {
+            color: $gray-text-clean;
+            line-height: 1.8;
+            font-size: 1rem;
+          }
       }
       .blog-section-content__container-img {
           border-radius: 10px 10px 0 0;
@@ -158,6 +256,12 @@ body {
   .slick-slide {
   padding: 0 15px 0 5px;
   box-sizing: border-box;
+  }
+  .slick-prev {
+    left: -70px;
+  }
+  .slick-prev, .slick-next {
+    top: 40%;
   }
   .slick-prev:before, .slick-next:before {
       display: none;
@@ -177,11 +281,15 @@ body {
     color: $primary;
     text-transform: uppercase;
     margin: 15px 0 30px 0;
+
+    @include media-breakpoint-down(md) {
+      margin: 45px 0 30px 0;
+    }
   }
   .about-text {
     color: $gray-text;
     font-size: 1.2rem;
-    line-height: 2;
+    line-height: 1.8;
   }
 }
 
@@ -193,4 +301,8 @@ body {
   font-weight: 300;
   margin: 100px 0 60px 0;
   color: #ccc8c7;
+
+  @include media-breakpoint-down(md) {
+    text-align: center;
+  }
 }
