--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -35,8 +35,12 @@ body {
 // ----------- Header
 .navbar-joyjet {
   z-index: 150;
-
   transition: all 0.2s ease-out 0s;
+
+  .brand-joyjet {
+    z-index: 980160;
+    position: relative;
+  }
 
   .nav-item {
     padding: 0 10px;
@@ -52,15 +56,16 @@ body {
 
   //NavMenu Down
   .navbar-collapse {
-
-  
-    @include media-breakpoint-down(md) {
+      @include media-breakpoint-down(md) {
       position: absolute;
-      bottom: -280px;
-      background-color:  $white;
+      top: 0;
+      left: 0;
+      background-color:  $primary;
       text-align: center;
       right: 20px;
       z-index: 980148;
+      width: 100%;
+      height: 100vh;
   
       -moz-box-shadow: 0px 1px 6px 0px rgba(51,51,51,0.4);
       box-shadow: 0px 1px 6px 0px rgba(51,51,51,0.4);
@@ -73,6 +78,12 @@ body {
       .header-sm .icon {
         padding: 0 3px;
         margin: 0 10px;
+      }
+
+      .navbar-nav {
+        font-size: 2rem;
+        line-height: 2.5;
+        padding-top: 130px;
       }
   
     }
@@ -93,6 +104,7 @@ body {
   border: 1px solid transparent;
   outline: none;
   background-color: transparent !important;
+  z-index: 980150;
 }
 .navbar-toggler .top-bar {
   transform: rotate(45deg);
@@ -265,6 +277,12 @@ body {
   }
   .slick-prev:before, .slick-next:before {
       display: none;
+  }
+  .slick-dots {
+    bottom: -45px;
+  }
+  .slick-dots li button:before {
+    font-size: 1.5rem;
   }
 }
 
