--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -144,6 +144,10 @@ body {
   transition: all 0.2s ease-out 0s;
 }
 
+.header-interns {
+  background-color: $gray-text;
+}
+
 //------- Banner space
 .home-hero {
   padding-top: 160px;
