--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -230,6 +230,7 @@ body {
 
 //-------- Section Blog Slick slider
 .blog-section {
+  padding-top: 50px;
     
   .blog-container-section {
       padding: 30px 0 80px 0;
